@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Fix alternative OSD support with VDPAU bitmap surfaces.
     Add support for umlauts in input fields.
     Fix compile error with VDR 2.1.3.
     Fix bug: memory leak.
